# wdcloader

./: CHANGELOG.md  README.md  main.py  pyproject.toml  requirements.txt  setup.py  wdcloader.py
doc/: PyPI.md
src/: board_utilities.py  command_codes.py  loader_utilities.py  wdcloader.py
src/wdcloader/: __init__.py  board_types.py  board_utilities.py  frontend.py  loader_utilities.py
tests/: conftest.py
